# python-project-lvl1

./: .travis.yml  Makefile  README.md  pyproject.toml  pyproject.toml.save
brain_games/: .cli.swp  cli.py  engine.py  scriptclears.save
brain_games/games/: calc.py  even.py  gcd.py  prime.py  progression.py  progression.py.save
brain_games/scripts/: brain_calc.py  brain_even.py  brain_even.pyy  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
python_project_lvl1.egg-info/: PKG-INFO  SOURCES.txt
